--- a/ExpanseTracker/Localization/en.lproj/ar.lproj.strings
+++ b/ExpanseTracker/Localization/en.lproj/ar.lproj.strings
@@ -5,3 +5,8 @@
   Created by Tahani Ayman on 17/10/1446 AH.
   
 */
+
+"save" = "حفظ";
+"edit_transaction" = "تعديل المعاملة";
+"welcome" = "مرحبا!";
+"how_much" = "السعر";
