--- a/ExpanseTracker/Localization/en.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/en.lproj/Localizable.strings
@@ -36,10 +36,39 @@
 "Other" = "Other";
 "SetBudget" = "Set Budget";
 "EditAccountInformation" = "Edit Account Information";
-"Add transaction" = "Add transaction";
+"AddTransaction" = "Add transaction";
 "Title" = "Title";
 "Category" = "Category";
 "Description" = "Description";
 "Transactiontype" = "Transaction type:";
 "Income" = "Income";
 "Expense" = "Expense";
+"SetYourBudget" = "You need to set your budget first!";
+"CategoryNameRequired" = "Category name is required!";
+"Error" = "Error";
+"OK" = "OK";
+"CategoryExist" = "Category already exist";
+"ColorExist" = "Color already exist";
+"BudgetLimitZero" = "Budget limit cannot be zero";
+"ExceededBudgetLimit" = "You have exceeded your budget limit";
+"InvalidNumberFormat" = "Invalid number format.";
+"BudgetAsRepeated" = "Do you want to set this budget as repeated?";
+"yes" = "yes";
+"no" = "no";
+"NameRequired" = "Name is required";
+"NewMonth" =  "It's a new month 😍!";
+"MonthPaln" = "What is your plan for this month? Has your budget changed 💸😉?";
+"NotificationsDisabled" = "Notifications Disabled";
+"NotificationSettings" = "To receive reminders, please enable notifications in Settings.";
+"OpenSettings" = "Open Settings";
+"Cancel" = "Cancel";
+"Sure" = "Are you sure?";
+"DeleteAccountMessage" = "Deleting your account will erase all your data.";
+"Delete" = "Delete";
+"Deleting" = "Deleting...";
+"Home" = "Home";
+"Categories" = "Categories";
+"Stats" = "Stats";
+"Profile" = "Profile";
+"NoTransaction" = "No transactions available for this category.";
+"SearchFor" = "Search for ...";
