--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -36,10 +36,39 @@
 "Other" = "اخرى";
 "SetBudget" = "حدد الميزانية";
 "EditAccountInformation" = "تعديل معلومات الحساب";
-"Addtransaction" = "اضافة معاملة";
+"AddTransaction" = "اضافة معاملة";
 "Title" = "العنوان";
 "Category" = "التصنيف";
 "Description" = "الوصف";
 "Transactiontype" = "نوع المعاملة:";
 "Income" = "ايرادات";
 "Expense" = "مصروفات";
+"SetYourBudget" = "يجب عليك تحديد ميزانيتك أولاً!";
+"CategoryNameRequired" = "اسم التصنيف مطلوب!";
+"Error" = "خطأ";
+"OK" = "نعم";
+"CategoryExist" = "التصنيف موجود مسبقاً";
+"ColorExist" = "اللون موجود مسبقاً";
+"BudgetLimitZero" = "لا يمكن أن يكون حد الميزانية صفرًا";
+"ExceededBudgetLimit" = "لقد تجاوزت الحد الأقصى للميزانية الخاصة بك";
+"InvalidNumberFormat" = "تنسيق الرقم غير صالح";
+"BudgetAsRepeated" = "هل تريد تعيين هذه الميزانية على أنها متكررة؟";
+"yes" = "نعم";
+"no" = "لا";
+"NameRequired" = "الاسم مطلوب";
+"NewMonth" =  "إنه شهر جديد 😍!";
+"MonthPaln" = "ما هي خطتك لهذا الشهر؟ هل تغيرت ميزانيتك 💸😉؟";
+"NotificationsDisabled" = "تم تعطيل الإشعارات";
+"NotificationSettings" = "لتلقي التذكيرات، يرجى تفعيل الإشعارات في الإعدادات.";
+"OpenSettings" = "فتح الإعدادات";
+"Cancel" = "الغاء";
+"Sure" = "هل أنت متأكد؟";
+"DeleteAccountMessage" = "سيؤدي حذف حسابك إلى مسح جميع بياناتك.";
+"Delete" = "حذف";
+"Deleting" = "جاري الحذف...";
+"Home" = "الصفحة الرئيسية";
+"Categories" = "التصنيفات";
+"Stats" = "إحصائيات";
+"Profile" = "الملف الشخصي";
+"NoTransaction" = "لا توجد معاملات متاحة لهذه الفئة.";
+"SearchFor" = "ابحث عن ...";
