--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "Entertainment" = "ترفية";
 "Emergency" = "طارئ";
 "Other" = "اخرى";
+"All" = "الكل";
 "SetBudget" = "حدد الميزانية";
 "EditAccountInformation" = "تعديل معلومات الحساب";
 "Addtransaction" = "اضافة معاملة";
@@ -43,3 +44,27 @@
 "Transactiontype" = "نوع المعاملة:";
 "Income" = "ايرادات";
 "Expense" = "مصروفات";
+
+
+"TitleD" = "العنوان:";
+"CategoryD" = "التصنيف:";
+"DateD" = "التاديخ:";
+"DescriptionD" = "الوصف:";
+"TransactionDetails" = "تفاصيل المعاملة";
+"HowMuch" = "كم الثمن؟";
+"EditTransaction" = "تعديل للمعاملة";
+"ReceiptImage" = "صورة الإيصال";
+"Welcome" = "مرحبا!";
+"Daily" = "يومي";
+"Weekly" = "أسبوعي";
+"Monthly" = "شهري";
+"Yearly" = "سنوي";
+
+
+"Home" = "الصفحة الرئيسية";
+"Categories" = "التصنيفات";
+"Stats" = "إحصائيات";
+"Profile" = "الملف الشخصي";
+
+
+
