--- a/ExpanseTracker/Localization/en.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/en.lproj/Localizable.strings
@@ -34,6 +34,7 @@
 "Entertainment" = "Entertainment";
 "Emergency" = "Emergency";
 "Other" = "Other";
+"All" = "All";
 "SetBudget" = "Set Budget";
 "EditAccountInformation" = "Edit Account Information";
 "Add transaction" = "Add transaction";
@@ -43,3 +44,26 @@
 "Transactiontype" = "Transaction type:";
 "Income" = "Income";
 "Expense" = "Expense";
+
+
+"TitleD" = "Title:";
+"CategoryD" = "Category:";
+"DateD" = "Date:";
+"DescriptionD" = "Description:";
+"TransactionDetails" = "Transaction Details";
+"HowMuch" = "How much?";
+"EditTransaction" = "Edit Transaction";
+"ReceiptImage" = "Receipt Image";
+"Welcome" = "Welcome!";
+"Daily" = "Daily";
+"Weekly" = "Weekly";
+"Monthly" = "Monthly";
+"Yearly" = "Yearly";
+
+
+"Home" = "Home";
+"Categories" = "Categories";
+"Stats" = "Stats";
+"Profile" = "Profile";
+
+
