--- a/ExpanseTracker/Localization/en.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/en.lproj/Localizable.strings
@@ -5,93 +5,79 @@
   Created by Rayaheen Mseri on 22/10/1446 AH.
   
 */
-"Save" = "Save";
-"edit_transaction" = "Edit Transaction";
-"welcome" = "Welcome!";
-"howMuch" = "How much?";
-"Budget" = "Budget";
-"YourSpend" = "Your Spend";
+
 "AccountInformation" = "Account Information";
-"Notifications" = "Notifications";
-"Language" = "Language";
-"Logout" = "Logout";
-"DeleteAccount" = "Delete Account";
-"Hello" = "Hello, %@";
-"LightMode" = "Light Mode";
-"DarkMode" = "Dark Mode";
-"Name" = "Name";
-"Email" = "Email";
-"Edit" = "Edit";
-"AddCategory" = "Add Category";
-"EditCategory" = "Edit Category";
-"CategoryName" = "Category Name";
-"CategoryIcon" = "Category Icon";
-"CategoryColor" = "Category Color";
-"CategoryType" = "Category Type";
-"BudgetLimit" = "Budget Limit";
 "Add" = "Add";
-"Essential" = "Essential";
-"Entertainment" = "Entertainment";
-"Emergency" = "Emergency";
-"Other" = "Other";
-"All" = "All";
-"SetBudget" = "Set Budget";
-"EditAccountInformation" = "Edit Account Information";
+"AddCategory" = "Add Category";
 "AddTransaction" = "Add transaction";
-"Title" = "Title";
-"Category" = "Category";
-"Description" = "Description";
-"Transactiontype" = "Transaction type:";
-"Income" = "Income";
-"Expense" = "Expense";
-
-
-
-"TitleD" = "Title:";
-"CategoryD" = "Category:";
-"DateD" = "Date:";
-"DescriptionD" = "Description:";
-"TransactionDetails" = "Transaction Details";
-"HowMuch" = "How much?";
-"EditTransaction" = "Edit Transaction";
-"ReceiptImage" = "Receipt Image";
-"Welcome" = "Welcome!";
-"Daily" = "Daily";
-"Weekly" = "Weekly";
-"Monthly" = "Monthly";
-"Yearly" = "Yearly";
-
-
-
-"SetYourBudget" = "You need to set your budget first!";
-"CategoryNameRequired" = "Category name is required!";
-"Error" = "Error";
-"OK" = "OK";
-"CategoryExist" = "Category already exist";
-"ColorExist" = "Color already exist";
-"BudgetLimitZero" = "Budget limit cannot be zero";
-"ExceededBudgetLimit" = "You have exceeded your budget limit";
-"InvalidNumberFormat" = "Invalid number format.";
+"All" = "All";
+"Budget" = "Budget";
 "BudgetAsRepeated" = "Do you want to set this budget as repeated?";
+"BudgetLimit" = "Budget Limit";
+"BudgetLimitZero" = "Budget limit cannot be zero";
+"Cancel" = "Cancel";
+"Category" = "Category";
+"CategoryColor" = "Category Color";
+"CategoryD" = "Category:";
+"CategoryExist" = "Category already exist";
+"CategoryIcon" = "Category Icon";
+"CategoryName" = "Category Name";
+"CategoryNameRequired" = "Category name is required!";
+"CategoryType" = "Category Type";
+"ColorExist" = "Color already exist";
+"DarkMode" = "Dark Mode";
+"DateD" = "Date:";
+"Delete" = "Delete";
+"DeleteAccount" = "Delete Account";
+"DeleteAccountMessage" = "Deleting your account will erase all your data.";
+"Deleting" = "Deleting...";
+"Description" = "Description";
+"DescriptionD" = "Description:";
+"Edit" = "Edit";
+"EditAccountInformation" = "Edit Account Information";
+"EditCategory" = "Edit Category";
+"EditTransaction" = "Edit Transaction";
+"Email" = "Email";
+"Emergency" = "Emergency";
+"Entertainment" = "Entertainment";
+"Error" = "Error";
+"Essential" = "Essential";
+"ExceededBudgetLimit" = "You have exceeded your budget limit";
+"Hello" = "Hello, %@";
+"Home" = "Home";
+"HowMuch" = "How much";
+"Income" = "Income";
+"InvalidNumberFormat" = "Invalid number format.";
+"Language" = "Language";
+"LightMode" = "Light Mode";
+"Logout" = "Logout";
+"Monthly" = "Monthly";
+"MonthPaln" = "What is your plan for this month? Has your budget changed 💸😉?";
+"Name" = "Name";
+"NameRequired" = "Name is required";
+"NewMonth" = "It's a new month 😍!";
+"NoTransaction" = "No transactions available for this category.";
+"NotificationSettings" = "To receive reminders, please enable notifications in Settings.";
+"Notifications" = "Notifications";
+"NotificationsDisabled" = "Notifications Disabled";
+"OK" = "OK";
+"OpenSettings" = "Open Settings";
+"Other" = "Other";
+"Profile" = "Profile";
+"ReceiptImage" = "Receipt Image";
+"Save" = "Save";
+"SearchFor" = "Search for ...";
+"SetBudget" = "Set Budget";
+"SetYourBudget" = "You need to set your budget first!";
+"Stats" = "Stats";
+"Sure" = "Are you sure?";
+"Title" = "Title";
+"TitleD" = "Title:";
+"TransactionDetails" = "Transaction Details";
+"Transactiontype" = "Transaction type:";
+"Weekly" = "Weekly";
+"Welcome" = "Welcome!";
+"Yearly" = "Yearly";
+"YourSpend" = "Your Spend";
 "yes" = "yes";
 "no" = "no";
-"NameRequired" = "Name is required";
-"NewMonth" =  "It's a new month 😍!";
-"MonthPaln" = "What is your plan for this month? Has your budget changed 💸😉?";
-"NotificationsDisabled" = "Notifications Disabled";
-"NotificationSettings" = "To receive reminders, please enable notifications in Settings.";
-"OpenSettings" = "Open Settings";
-"Cancel" = "Cancel";
-"Sure" = "Are you sure?";
-"DeleteAccountMessage" = "Deleting your account will erase all your data.";
-"Delete" = "Delete";
-"Deleting" = "Deleting...";
-
-"Home" = "Home";
-"Categories" = "Categories";
-"Stats" = "Stats";
-"Profile" = "Profile";
-
-"NoTransaction" = "No transactions available for this category.";
-"SearchFor" = "Search for ...";
-
