--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "Transactiontype" = "نوع المعاملة:";
 "Income" = "ايرادات";
 "Expense" = "مصروفات";
-"SetYourBudget" = "يجب عليك تحديد ميزانيتك أولاً!";
+"SetYourBudget" = "يجب عليك تحديد الميزانية الخاصة بك أولاً من حقل الميزانية في صفحة الملف الشخصي!";
 "CategoryNameRequired" = "اسم التصنيف مطلوب!";
 "Error" = "خطأ";
 "OK" = "نعم";
@@ -72,3 +72,5 @@
 "Profile" = "الملف الشخصي";
 "NoTransaction" = "لا توجد معاملات متاحة لهذه الفئة.";
 "SearchFor" = "ابحث عن ...";
+"SaveChange" = "لا توجد تغييرات لحفظها.";
+"All" = "الكل";
