feat: login/signup page in arabic and english
- translated the welcome and log in and sign up pages
- made few changes in the categories pages

--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "CategoryType" = "نوع التصنيف";
 "Categories" = "التصنيفات";
 "ColorExist" = "اللون موجود مسبقاً";
+"ConfirmPassword" = "تأكيد كلمة المرور ";
 "Daily" = "يومي";
 "DarkMode" = "المظهر الداكن";
 "DateD" = "التاديخ:";
@@ -50,6 +51,7 @@
 "Deleting" = "جاري الحذف...";
 "Description" = "الوصف";
 "DescriptionD" = "الوصف:";
+"DHaveAccount" = "ليس لديك حساب؟";
 "Edit" = "تعديل";
 "EditAccountInformation" = "تعديل معلومات الحساب";
 "EditCategory" = "تعديل التصنيف";
@@ -64,10 +66,13 @@
 "Hello" = "مرحباً, %@";
 "Home" = "الصفحة الرئيسية";
 "HowMuch" = "السعر";
+"HaveAccount" = "هل لديك حساب بالفعل؟";
 "Income" = "ايرادات";
 "InvalidNumberFormat" = "تنسيق الرقم غير صالح";
 "Language" = "اللغة";
 "LightMode" = "المظهر الفاتح";
+"LogIn" = "تسجيل الدخول";
+"LogIn2" = "سجّل الدخول";
 "Logout" = "تسجيل الخروج";
 "Monthly" = "شهري";
 "MonthPaln" = "ما هي خطتك لهذا الشهر؟ هل تغيرت ميزانيتك 💸😉؟";
@@ -82,8 +87,11 @@
 "OpenSettings" = "فتح الإعدادات";
 "Other" = "اخرى";
 "Profile" = "الملف الشخصي";
+"Password" = "كلمة المرور";
 "ReceiptImage" = "صورة الإيصال";
 "Save" = "حفظ";
+"SignUp" = "انشاء حساب جديد";
+"SignUp2" = "سجل الان";
 "SearchFor" = "ابحث عن ...";
 "SetBudget" = "حدد الميزانية";
 "SetYourBudget" = "يجب عليك تحديد ميزانيتك أولاً!";
@@ -94,6 +102,8 @@
 "TransactionDetails" = "تفاصيل المعاملة";
 "Transactiontype" = "نوع المعاملة:";
 "Welcome" = "مرحبا!";
+"WelcomeSMesg" = "اجعل تجربة تتبع نفقاتك أفضل اليوم.";
+"WelcomeMesg" = "مرحبا في  SpendSmartly";
 "Weekly" = "أسبوعي";
 "Yearly" = "سنوي";
 "YourSpend" = "الإنفاق";
