--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -96,6 +96,7 @@
 "SetBudget" = "حدد الميزانية";
 "SetYourBudget" = "يجب عليك تحديد ميزانيتك أولاً!";
 "Stats" = "إحصائيات";
+"Statistics" = "الإحصائيات";
 "Sure" = "هل أنت متأكد؟";
 "Title" = "العنوان";
 "TitleD" = "العنوان:";
