--- a/ExpanseTracker/Localization/en.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/en.lproj/Localizable.strings
@@ -93,6 +93,7 @@
 "SetBudget" = "Set Budget";
 "SetYourBudget" = "You need to set your budget first!";
 "Stats" = "Stats";
+"Statistics" = "Statistics";
 "Sure" = "Are you sure?";
 "Title" = "Title";
 "TitleD" = "Title:";
