text can change to arabic

--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -30,6 +30,7 @@
 "BudgetAsRepeated" = "هل تريد تعيين هذه الميزانية على أنها متكررة؟";
 "BudgetLimit" = "حد الميزاينة";
 "BudgetLimitZero" = "لا يمكن أن يكون حد الميزانية صفرًا";
+"Bar" = "رسم عمودي";
 "Cancel" = "الغاء";
 "Category" = "التصنيف";
 "CategoryColor" = "لون التصنيف";
@@ -74,6 +75,7 @@
 "LogIn" = "تسجيل الدخول";
 "LogIn2" = "سجّل الدخول";
 "Logout" = "تسجيل الخروج";
+"Line" = "رسم خطي";
 "Monthly" = "شهري";
 "MonthPaln" = "ما هي خطتك لهذا الشهر؟ هل تغيرت ميزانيتك 💸😉؟";
 "Name" = "الاسم";
@@ -83,10 +85,12 @@
 "NotificationSettings" = "لتلقي التذكيرات، يرجى تفعيل الإشعارات في الإعدادات.";
 "Notifications" = "التنبيهات";
 "NotificationsDisabled" = "تم تعطيل الإشعارات";
+"NoDataFound" = "لا يوجد بيانات";
 "OK" = "نعم";
 "OpenSettings" = "فتح الإعدادات";
 "Other" = "اخرى";
 "Profile" = "الملف الشخصي";
+"Pie" = "رسم دائري";
 "Password" = "كلمة المرور";
 "ReceiptImage" = "صورة الإيصال";
 "Save" = "حفظ";
