feature: translate auth error message
- i did more translation to the error messages

--- a/ExpanseTracker/Localization/ar.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/ar.lproj/Localizable.strings
@@ -69,11 +69,14 @@
 "HaveAccount" = "هل لديك حساب بالفعل؟";
 "Income" = "ايرادات";
 "InvalidNumberFormat" = "تنسيق الرقم غير صالح";
+"InvalidEmail" = "ايميل غير صحيح";
+"ValidEmail" = "الرجاء ادخال ايميل صحيح";
 "Language" = "اللغة";
 "LightMode" = "المظهر الفاتح";
 "LogIn" = "تسجيل الدخول";
 "LogIn2" = "سجّل الدخول";
 "Logout" = "تسجيل الخروج";
+"LoginFailed" = "فشل تسجيل الدخول";
 "Monthly" = "شهري";
 "MonthPaln" = "ما هي خطتك لهذا الشهر؟ هل تغيرت ميزانيتك 💸😉؟";
 "Name" = "الاسم";
@@ -88,6 +91,8 @@
 "Other" = "اخرى";
 "Profile" = "الملف الشخصي";
 "Password" = "كلمة المرور";
+"PasswordMismatch" = "كلمة المرور غير متطابقة";
+"PasswordMismatchMsg" = "الرجاء ادخال كلمة مرور متطابقة";
 "ReceiptImage" = "صورة الإيصال";
 "Save" = "حفظ";
 "SignUp" = "انشاء حساب جديد";
@@ -95,7 +100,15 @@
 "SearchFor" = "ابحث عن ...";
 "SetBudget" = "حدد الميزانية";
 "SetYourBudget" = "يجب عليك تحديد ميزانيتك أولاً!";
+"SignupFailed" = "فشل انشاء حساب جديد";
 "Stats" = "إحصائيات";
+"UnknownError" = "حدث خطأ غير متوقع. الرجاء المحاولة مرة أخرى.";
+"CredentialsError" = "بيانات تسجيل الدخول غير صحيحة أو أن الحساب غير موجود. الرجاء التحقق من الايميل وكلمة المرور.";
+"AssociatedEmail" = "هذا الايميل مرتبط بحساب آخر بالفعل.";
+"EmailInvalid" = "الرجاء إدخال ايميل صحيح.";
+"NetworkError" = "حدث خطأ في الشبكة. الرجاء التحقق من الاتصال بالإنترنت والمحاولة مرة أخرى.";
+"2Many" = "عدد كبير من المحاولات. الرجاء الانتظار قليلاً ثم المحاولة من جديد.";
+"InternalError" = "حدث خطأ داخلي. الرجاء المحاولة مرة أخرى لاحقًا.";
 "Sure" = "هل أنت متأكد؟";
 "Title" = "العنوان";
 "TitleD" = "العنوان:";
@@ -104,6 +117,8 @@
 "Welcome" = "مرحبا!";
 "WelcomeSMesg" = "اجعل تجربة تتبع نفقاتك أفضل اليوم.";
 "WelcomeMesg" = "مرحبا في  SpendSmartly";
+"WeakPassword" = "كلمة مرور ضعيفة";
+"WeakPasswordMsg" = "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل، منها حرف كبير واحد وحرف صغير واحد ورقم واحد";
 "Weekly" = "أسبوعي";
 "Yearly" = "سنوي";
 "YourSpend" = "الإنفاق";
