--- a/ExpanseTracker/Localization/en.lproj/Localizable.strings
+++ b/ExpanseTracker/Localization/en.lproj/Localizable.strings
@@ -66,11 +66,13 @@
 "HaveAccount" = "Already have an account?";
 "Income" = "Income";
 "InvalidNumberFormat" = "Invalid number format.";
+"InvalidEmail" = "Invalid Email";
 "Language" = "Language";
 "LightMode" = "Light Mode";
 "LogIn" = "Log in";
 "LogIn2" = "Log in";
 "Logout" = "Logout";
+"LoginFailed" = "Login Failed";
 "Monthly" = "Monthly";
 "MonthPaln" = "What is your plan for this month? Has your budget changed 💸😉?";
 "Name" = "Name";
@@ -85,6 +87,10 @@
 "Other" = "Other";
 "Profile" = "Profile";
 "Password" = "Password";
+"PasswordMismatch" = "Password mismatch";
+"PasswordMismatchMsg" = "Please enter matched passwords";
+"ValidEmail" = "Please enter a valid email address";
+"FillAll" = "Please fill in all fields";
 "ReceiptImage" = "Receipt Image";
 "Save" = "Save";
 "SignUp" = "Sign up";
@@ -94,6 +100,7 @@
 "SetYourBudget" = "You need to set your budget first!";
 "Stats" = "Stats";
 "Sure" = "Are you sure?";
+"SignupFailed" = "Signup Failed";
 "Title" = "Title";
 "TitleD" = "Title:";
 "TransactionDetails" = "Transaction Details";
@@ -102,10 +109,20 @@
 "Welcome" = "Welcome!";
 "WelcomeSMesg" = "Make your expense tracking experience more better today.";
 "WelcomeMesg" = "Welcome to SpendSmartly";
+"WeakPassword" = "Weak password";
+"WeakPasswordMsg" = "Password must be at least 8 characters with 1 uppercase, 1 lowercase, and 1 number";
+"WeakPasswordMsg2" = "The password is too weak. Please choose a stronger one.";
 "Yearly" = "Yearly";
 "YourSpend" = "Your Spend";
-"yes" = "yes";
-"no" = "no";
+"UnknownError" = "An unknown error occurred. Please try again.";
+"CredentialsError" = "The login credentials are incorrect or the account does not exist. Please check your email and password, then try again.";
+"AssociatedEmail" = "This email address is already associated with another account.";
+"EmailInvalid" = "The email address entered is invalid.";
+"NetworkError" =  "A network error occurred. Please check your connection and try again.";
+"2Many" = "Too many attempts. Please wait and try again later.";
+"InternalError" = "An internal error occurred. Please try again later.";
+"yes" = "Yes";
+"no" = "No";
 "NameRequired" = "Name is required";
 "NewMonth" =  "It's a new month 😍!";
 "MonthPaln" = "What is your plan for this month? Has your budget changed 💸😉?";
